- Fix: Secondary menu not expendable on mobile when it is outside of Off Canvas.
- Fix: CLS – Flashing desktop menu on mobile view.
- Fix: WooCommerce - product search widget button not aligned on other than shop and single product page.
- Fix: Sticky Header - Transition effect of headers when Shrink Effect is enabled.

v3.5.0
- Fix: Aspect ratio is changed for YouTube embed block.
- Fix: Spacing CSS missing when 'Inline Logo and Title' option is enabled.
- Updated the theme screenshot.
- Fix: JS Console error in blog/archive customizer settings.
- Fix: WooCommerce - Product's Sale bubble appears on the header on scroll due to z-index.
- Fix: Site Title and Tagline context not working properly for new Header Footer builder.
- Fix: Version compare updated to v3.5.0 to support Site Title & Tagline pro color controls dependency.

v3.5.0-beta.1
- New: Related Posts - Option to change "Related Posts" title.
- New: Related Posts - Alignment option for "Related Posts" title.
- Improvement: Frontend optimization by reducing static CSS and loading it conditionally. (https://wpastra.com/astra-3-5/)
- Improvement: Added Site Title & Tagline color options from Astra Pro to free theme.
- Improvement: Builder - WooCommerce Cart & EDD Cart - Filter to change "Shopping Cart" text in responsive flyout. (https://wpastra.com/docs/update-mobile-cart-title/)
- Improvement: Related Posts - Added responsive support to posts Grid Column Layout.
- Improvement: Core Web Vital – Accessibility - always show aria-label attribute on builder social icons. (Props - https://github.com/tristanmason)
- Improvement: Core Web Vital - Accessibility - Background and foreground colors do not have a sufficient contrast ratio.
- Improvement: Increase max submenu width option value from 200 to 1920 same as the container.
- Improvement: Added responsive control for 'Display Site Title' and 'Display Site Tagline' settings.