@@ -12,6 +12,7 @@ v3.6.0 (Unreleased)
 - Fix: CLS – Flashing desktop menu on mobile view.
 - Fix: WooCommerce - product search widget button not aligned on other than shop and single product page.
 - Fix: Sticky Header - Transition effect of headers when Shrink Effect is enabled.
+- Fix: Two submit buttons visible on results page when Astra SVG icons enabled.
 
 v3.5.0
 - Fix: Aspect ratio is changed for YouTube embed block.
